name:                servant-render-client
version:             0.1.0.0
synopsis:            Single page apps with servant and reflex
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Servant Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Render.Client
  build-depends:       base >=4.9 && <4.10
                     , reflex == 0.5.*
                     , reflex-dom == 0.4.*
                     , servant-render == 0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
