name:                servant-render
version:             0.1.0.0
synopsis:            Single page apps with servant and reflex
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Servant Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Render
                     , Servant.Common.Req
                     , Servant.Common.Uri
                     , Servant.Common.PopState
  build-depends:       base >=4.9 && <4.10
                     , bytestring >= 0.10 && < 0.12
                     , text == 1.2.*
                     , attoparsec == 0.13.*
                     , containers >= 0.5 && < 0.8
                     , jsaddle == 0.8.*
                     , reflex == 0.5.*
                     , reflex-dom == 0.4.*
                     , http-media == 0.6.*
                     , http-api-data == 0.2.*
                     , servant == 0.8.*
                     , file-embed == 0.0.*
  hs-source-dirs:      src
  default-language:    Haskell2010
