name:                backend
version:             0.1.0.0
synopsis:            Backend for the servant-render example
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          8
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable backend
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , common
                     , directory
                     , warp
                     , wai-cors
                     , servant-server
                     , servant-render
                     , servant-render-server
  hs-source-dirs:      src
  default-language:    Haskell2010
