name:                common
version:             0.1.0.0
synopsis:            API shared between the frontend and backend
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Common
  build-depends:       base >=4.9 && <4.10
                     , reflex-dom
                     , bytestring
                     , text
                     , aeson
                     , http-media
                     , servant
                     , servant-render
  hs-source-dirs:      src
  default-language:    Haskell2010
