name:                frontend
version:             0.1.0.0
synopsis:            Frontend for the servant-render example project
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , common
                     , reflex-dom
                     , servant-render
                     , servant-render-client
  hs-source-dirs:      src
  default-language:    Haskell2010
